# SDZTG-gateway

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  start_sdztg.sh
docs/: architecture.md  br0-bridge-buildout.md  lab.md  lab_environment.md  p1-throughput-baseline.md  security-notes.md
src/: alerts.py  anomaly.py  baseline.py  capture.py  dashboard.py  dns_detect.py  nft_generator.py  policy.yaml  policy_engine.py  safe_apply_nft.sh
tests/: example_usage.py  test_capture.py  test_policy_engine.py
