[project]
name = "sdztg-gateway"
version = "0.1.0"
description = "Software-Defined Zero-Trust Gateway for commodity IoT devices"
requires-python = ">=3.11"

dependencies = [
    "click==8.4.1",
    "Jinja2=="3.1.6",
    "requests=="2.34.2",
    "scapy=="2.7.0",
    "Werkzeug=="3.1.8",
    "flask==3.1.3",
    "PyYAML==6.0.3",
]